# cupy-nanobind-example

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  test.py
src/example/: cuda.cu
